Study Material/kubernetes/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
# External Service
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer        # Make it external service (assigns external ip address to accept external request)
  # inconvenient name because internal services also work as load balancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000       # External port, has range from (30000 - 32767)
