Study Material/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ######### configuration for mapping https requests
  tls:
  - hosts:
    - myapp.com
    secretName: myapp-secret-tls
  #########
  rules:
  - host: myapp.com
    http:
      paths:
      - backend:
          serviceName: myapp-internal-service
          servicePort: 8080
